tests/ui/feature-gates/feature-gate-unsafe_pin_internals.stderr
error: the feature `unsafe_pin_internals` is internal to the compiler or standard library
  --> $DIR/feature-gate-unsafe_pin_internals.rs:3:12
   |
LL | #![feature(unsafe_pin_internals)]
   |            ^^^^^^^^^^^^^^^^^^^^
   |
   = note: using it is strongly discouraged
note: the lint level is defined here
  --> $DIR/feature-gate-unsafe_pin_internals.rs:2:11
   |
LL | #![forbid(internal_features, unsafe_code)]
   |           ^^^^^^^^^^^^^^^^^

error: aborting due to previous error

